# lyricist

./: README.md  pyproject.toml
src/: settings.py
src/data_engineering/crawlers/: base.py
