[project]
name = "lyricist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "pandas>=2.2.3",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"